# openai-streaming-tts-practice

./: Makefile  README.md  pyproject.toml
src/: main.py
